--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 @font-face {
     font-family: 'Heebo';
-    src: url(./Fonts/Heebo-Bold.woff2); format('woff2');
+    src: url(./Fonts/Heebo-Bold.woff2) format( 'woff2' );
     font-weight: 700;
     font-style: normal;
     font-display: swap;
@@ -8,7 +8,7 @@
 
 @font-face {
     font-family: 'Heebo';
-    src: url(./Fonts/Heebo-Regular.woff2); format('woff2');
+    src: url(./Fonts/Heebo-Light.woff2) format('woff2');
     font-weight: 400;
     font-style: normal;
     font-display: swap;
@@ -16,7 +16,7 @@
 
 @font-face {
     font-family: 'Yantramanav';
-    src: url(./Fonts/Yantramanav-Bold.woff2); format('woff2');
+    src: url(./Fonts/Yantramanav-Bold.woff2) format('woff2');
     font-weight: 700;
     font-style: normal;
     font-display: swap;
