--- a/style.css
+++ b/style.css
@@ -1,7 +1,6 @@
 @font-face {
     font-family: 'Heebo';
     src: url(./Fonts/Heebo-Bold.woff2) format('woff2');
-    src: url(./Fonts/Heebo-Light.woff2) format('woff2');
     font-weight: 700;
     font-style: normal;
     font-display: swap;
@@ -9,7 +8,6 @@
 
 @font-face {
     font-family: 'Heebo';
-    src: url(./Fonts/Heebo-Bold.woff2) format('woff2');
     src: url(./Fonts/Heebo-Light.woff2) format('woff2');
     font-weight: 300;
     font-style: normal;
@@ -24,3 +22,35 @@
     font-display: swap;
 }
 
+:root {
+    --color-dark: #000;
+    --color-light: #fff;
+    --color-dark-gray: #404040;
+    --color-light-gray: #c4c4c4;
+
+    --border-radius: 30px;
+    --border: 1px solid var(--color-light);
+
+    --font-family-base: 'Heebo' , sans-serif;
+    --font-family-accent: 'Yantramanav' , sans-serif;
+
+    --input-hight: 54px;
+
+    --container-width: 1300px;
+    --container-padding: 15px;
+
+    --transition-duration: 0.2s;
+}
+
+body {
+    font-family: var(--font-family-base);
+    font-size: 16px;
+    line-height: 1.75;
+    background-color: var(--color-dark);
+    color: var(--color-light-gray);
+
+}
+
+.container {
+    max-width: calc(var(--container-width) + var(--container-padding) * 2);
+}
