--- a/style.css
+++ b/style.css
@@ -53,4 +53,12 @@ body {
 
 .container {
     max-width: calc(var(--container-width) + var(--container-padding) * 2);
+    margin-inline: auto;
+    padding-inline: var(--container-padding);
 }
+
+h1, h2, h3, h4, h5, h6  {
+    text-transform: uppercase;
+    font-weight: bold;
+}
+\
